fix text wrap in calendar events

--- a/assets/styles/frontend/elements/_calendar.scss
+++ b/assets/styles/frontend/elements/_calendar.scss
@@ -48,4 +48,8 @@
             transition: opacity 150ms ease-in-out;
         }
     }
+
+    .modal-body {
+        text-wrap: wrap;
+    }
 }
